# BharatDoc

./: .gitignore  ADDITIONS_SUMMARY.md  ANALYTICS_COMPLETE.md  CHECKLIST.md  CI_CD_SUMMARY.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_COMMANDS.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_ISSUE_EXPLAINED.md  DASHBOARD_NOT_LOADING_FIX.md  FIX_DASHBOARD_NOW.md  GITHUB_PUSH_COMPLETE.md  GIT_RESTRUCTURE_COMMANDS.txt  GIT_RESTRUCTURE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTERVIEW_QUICK_REFERENCE.md  Makefile  PROJECT_RUNNING.md  PUSH_SUMMARY.md  QUICK_START.md  README.md  README_NEW.md  README_OLD.md  SETUP_INSTRUCTIONS.md  START_HERE.md  THREE_ADDITIONS_COMPLETE.md  pyproject.toml  pytest.ini  quick_check.py  requirements.txt  run_check.py  start-dashboard.ps1  test_extraction.py  test_ocr_only.py  verify_fix.py
.github/: CICD_SETUP.md
analytics/: .env.example  Dockerfile  Makefile  QUICKSTART.md  README.md  __init__.py  client.py  example_integration.py  main.py  queries.py  requirements.txt  schema.sql  seed_data.py  test_api.py
apps/: __init__.py
core/: __init__.py  vlm_extractor.py
data_pipeline/: __init__.py  aadhaar_extractor.py  augment.py  collect.py  deduplicate.py  dvc.yaml  field_extractor.py  noise_profiles.py  ocr_parse.py  quality_filter.py  synthetic_gen.py
docker/: Dockerfile.gateway  Dockerfile.inference  docker-compose.yml  prometheus.yml
evaluation/: __init__.py  calibration.py  document_level_eval.py  failure_analyzer.py  field_level_eval.py  generate_report.py  human_eval_export.py  regression_tracker.py  slice_eval.py
feedback_loop/: __init__.py  active_learning.py  annotation_export.py  flag_failures.py  retrain_trigger.py  sample_for_annotation.py
gateway/: __init__.py  gateway.py  main.py  queue.py
inference/: __init__.py  ab_config.yaml  benchmark.py  circuit_breaker.py  quantize.py  queue_handler.py  server.py  versioned_endpoints.py
mlflow/: __init__.py  tracking_config.yaml
monitoring/: __init__.py  alerting_rules.yaml  grafana_dashboard.json  prometheus_metrics.py
router/: __init__.py  classifier.py  routing_config.yaml
schemas/: __init__.py  aadhaar.json  invoice.json  lic_policy.json  models.py
scripts/: run_ci_checks.bat  run_ci_checks.sh
tests/: __init__.py  test_inference.py  (+3 more)
(+75 files in other folders)
